--- a/assignment/index.html
+++ b/assignment/index.html
@@ -12,7 +12,7 @@
     </header>
     <div class="info">
       <h2>My name is Laokeng</h2>
-      <img src="https://scontent-msp1-1.xx.fbcdn.net/v/t39.30808-6/241054932_2028573190624309_3761893010002570077_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=0debeb&_nc_ohc=BUekiBfu2esAX9FapIF&_nc_ht=scontent-msp1-1.xx&oh=05342afdddb5db7d91ef71c3facbaf49&oe=61426A9C" alt="">
+      <img src="file:///Users/laokengvang/Downloads/NA.jpeg" alt="Miata">
       <h3>I used drive a 1991 Mazda Miata. It was also my fun show car at one point!</h3>
     </div>
 
